# micam

./: .env.example  Dockerfile  Dockerfile.miloco  README.md  docker-compose-micam-only.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-miloco.yaml
micam/: __init__.py
